# 100-players

./: .gitattributes  .gitignore  README.md  api.py  central_api.py  database.py  package-lock.json  pyproject.toml  requirements.txt  servers.sqlite  start.sh
Central Server/: api.py  bot.py  database.py  run.ps1  run.sh  servers.sqlite
Central Server/server/: central-conf.json  db.sqlite
Central Server/website/: README.md  index.html  package-lock.json  package.json
Central Server/website/src/: App.css  App.tsx  index.css
Central Server/website/src/pages/: admin.tsx  events.tsx  home.tsx
Local server/: run.sh
app/: askip.py  main.py  main.tcss  send.py
bot/: api.py  database.py  handlers.py  main.py
clicked/: CMakeLists.txt  README.md  mod.json
clicked/src/: main.cpp
no touch/: CMakeLists.txt  README.md  mod.json
no touch/src/: main.cpp
server/: central-conf.json  db.sqlite
server/local/: run.sh
website/: index.html  package-lock.json  package.json
website/src/: App.css  App.tsx  index.css
website/src/pages/: admin.tsx  events.tsx  footer.tsx  hero.tsx  home.tsx  navbar.tsx
