[project]
name = "100-players"
version = "0.1.0"
description = ""
authors = [
    {name = "anekobtw",email = "krolexonder@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.22,<4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.poetry.dependencies]
aiogram = {allow-prereleases = true}
aiohttp = "^3.12"
